# tuitop

./: CMakeLists.txt  README.md  flake.nix  shell.nix
.github/workflows/: build.yml  update-flake.yml
src/: common.h  main.cpp  proc_info.cpp  proc_info.h  ui.cpp  ui.h
